@@ -68,7 +68,8 @@ struct ReactionMorgan98 : public ReactionColgen
   // Create and Destroy.
   void initialize (const Geometry& geo,
                    const Soil& soil, const SoilWater&, const SoilHeat&, 
-                   const OrganicMatter&, const Surface&, Treelog&);
+                   const OrganicMatter&, const Chemistry&,
+		   const Surface&, Treelog&);
   ReactionMorgan98 (const BlockModel& al);
 };
 
@@ -130,7 +131,7 @@ void
 ReactionMorgan98::initialize (const Geometry& geo, 
                               const Soil& soil,
                               const SoilWater&, const SoilHeat&, 
-                              const OrganicMatter&,
+                              const OrganicMatter&, const Chemistry&,
 			      const Surface& surface, Treelog&)
 { surface_soil = find_surface_soil (geo, soil, surface); }
 
